# $NetBSD: CHANGES-5.1,v 1.1.2.122 2009/10/18 19:04:41 snj Exp $

A complete list of changes from the NetBSD 5.0 release to the NetBSD 5.1
release:

gnu/usr.bin/groff/tmac/mdoc.local		patched by hand
sys/sys/param.h					patched by hand

	Welcome to 5.0_STABLE.
	[snj]

sys/arch/i386/conf/ALL				1.187
sys/arch/i386/conf/GENERIC			1.922
sys/dev/pci/files.pci				1.309
sys/dev/pci/gcscaudio.c				1.1
sys/dev/pci/gcscaudioreg.h			1.1

	Add AMD Geode CS5536 audio driver; written by SHIMIZU Ryo.
	[jmcneill, ticket #260]

distrib/sets/lists/man/mi			1.1117
share/man/man4/Makefile				1.485
share/man/man4/gcscaudio.4			1.1

	Add man page for the gcscaudio driver.
	[jmcneill, ticket #261]

sys/dev/mii/inphy.c				1.51
sys/dev/mii/iophy.c				1.35
sys/dev/mii/nsphy.c				1.56
sys/dev/mii/rlphy.c				1.25
sys/dev/mii/ukphy_subr.c			1.11
sys/dev/pci/if_txp.c				1.28

	Our drivers give 100BASE-T4 a higher priority than 100BASE-TX
	full duplex.  Fix this.
	[cegger, ticket #474]

sys/arch/i386/acpi/npx_acpi.c			1.18
sys/arch/i386/acpi/spic_acpi.c			1.21
sys/dev/acpi/acpi_ec.c				1.53
sys/dev/acpi/acpi_resource.c			1.27
sys/dev/acpi/atppc_acpi.c			1.16
sys/dev/acpi/attimer_acpi.c			1.12
sys/dev/acpi/com_acpi.c				1.28
sys/dev/acpi/fdc_acpi.c				1.35
sys/dev/acpi/hpet_acpi.c			1.4
sys/dev/acpi/joy_acpi.c				1.9
sys/dev/acpi/lpt_acpi.c				1.18
sys/dev/acpi/mpu_acpi.c				1.9
sys/dev/acpi/pckbc_acpi.c			1.31
sys/dev/acpi/pcppi_acpi.c			1.11
sys/dev/acpi/ug_acpi.c				1.5
sys/dev/acpi/wss_acpi.c				1.20
sys/dev/acpi/ym_acpi.c				1.6

	Cut the amount of spam from acpi devices in roughly half by
	printing resources on the same line as autoconf messages.
	[jmcneill, ticket #498]

sys/dev/acpi/acpi_ec.c				1.54

	Change a confusing attach message.
	[jmcneill, ticket #535]

distrib/sets/lists/base/mi			1.797 via patch
sys/dev/microcode/zyd/Makefile			1.2
sys/dev/microcode/zyd/zd1211-licence		delete
sys/dev/microcode/zyd/zd1211-license		1.1

	- Rename filename of license.